# chip8-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CPU.cpp  CPU.hpp  Emulator.cpp  Emulator.hpp  Font.hpp  Shared.hpp  main.cpp
